# UIUCTF-2024-Public

./: .gitattributes  .gitignore  README.md  flake.nix  k8s.yaml
.github/workflows/: ci.yml
challenges/: README.md  complex-deploy.sh  rcds.yaml
challenges/crypto/key-in-a-haystack/: SOLVE.md  challenge.yaml  deploy.sh  kube.yaml
challenges/crypto/marked/: challenge.yaml  gen.py  modmail.md  sol.py  solve.md
challenges/crypto/naptime/: attack.sage  challenge.yaml  enc.sage  solve.md
challenges/crypto/pwnyexec/: README.md  challenge.yaml
challenges/crypto/pwnyexec/challenge/: Cargo.toml  Dockerfile  asm.asm  bin  decrypt.py  flag  socat.sh
challenges/crypto/pwnyexec/challenge/src/: README.md  main.rs
challenges/crypto/without-a-trace/: modmail.md
challenges/misc/emacsjail/: WRITEUP.org
challenges/misc/feedback/: challenge.yaml
challenges/misc/push-and-pickle/: SOLVE.md
challenges/misc/sanity-check/: challenge.yaml
challenges/misc/testchal/: challenge.yaml
challenges/osint/an-unlikely-partnership/: challenge.yaml
challenges/osint/city/: challenge.yaml
challenges/osint/hip-with-the-youth/: challenge.yaml
picoify_scoreboard_bot/: README.md  bot.yaml  build.sh  init_message.py
picoify_scoreboard_bot/bot/: Dockerfile  main.py
rctf-theme/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
rctf-theme/public/: _headers
status_bot/: README.md  bot.secret.yaml  bot.yaml  build.sh
status_bot/bot/: Dockerfile  kube.py  main.py
terraform/: db.tf  k8s.tf  main.tf  terraform.tfvars  traefik.tf  vpc.tf
(+170 files in other folders)
