[package]
name = "pwnyexec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
base64 = "0.21.2"
block-modes = "0.9.1"
cbc = "0.1.2"
hex-literal = "0.4.1"
libc = "0.2.147"
regex = "1.9.3"
